--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /*/[Aa]ssets/[Ss]treamingAssets/aa.meta
 /*/[Aa]ssets/[Ss]treamingAssets/aa/*
+GameJamFeb/Assets/SunnyLand Artwork.meta
+GameJamFeb/Assets/SunnyLand Artwork
