stage 2,3 base doen

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,5 @@ crashlytics-build.properties
 /*/[Aa]ssets/[Ss]treamingAssets/aa/*
 GameJamFeb/Assets/SunnyLand Artwork.meta
 GameJamFeb/Assets/SunnyLand Artwork
+GameJamFeb/Assets/sunnyland woods
+GameJamFeb/Assets/sunnyland woods.meta
