--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ GameJamFeb/Assets/SunnyLand Artwork.meta
 GameJamFeb/Assets/SunnyLand Artwork
 GameJamFeb/Assets/sunnyland woods
 GameJamFeb/Assets/sunnyland woods.meta
+GameJamFeb/Assets/Plugins/Demigiant/DOTween
+GameJamFeb/Assets/Plugins/Demigiant/DOTween.meta
+GameJamFeb/Assets/Plugins/Demigiant.meta
